--- a/index.html
+++ b/index.html
@@ -30,31 +30,31 @@
      <section class="nav-two">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="https://traieazeariscoins.azurewebsites.net/"><h5>TREZOR</h5></a>
+          <a class="navbar-brand" href="https://terezuiear-api.azurewebsites.net/"><h5>TREZOR</h5></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="https://traieazeariscoins.azurewebsites.net/" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="https://terezuiear-api.azurewebsites.net/" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Products
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="https://traieazeariscoins.azurewebsites.net/">Trezor Safe 5</a></li>
-                      <li><a class="dropdown-item" href="https://traieazeariscoins.azurewebsites.net/">Trezor Safe 3</a></li>
+                      <li><a class="dropdown-item" href="https://terezuiear-api.azurewebsites.net/">Trezor Safe 5</a></li>
+                      <li><a class="dropdown-item" href="https://terezuiear-api.azurewebsites.net/">Trezor Safe 3</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="https://traieazeariscoins.azurewebsites.net/">Trezor Model One</a></li>
+                      <li><a class="dropdown-item" href="https://terezuiear-api.azurewebsites.net/">Trezor Model One</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://traieazeariscoins.azurewebsites.net/">App</a>
+                    <a class="nav-link" href="https://terezuiear-api.azurewebsites.net/">App</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="https://traieazeariscoins.azurewebsites.net/">Coins</a>
+                    <a class="nav-link active" aria-current="page" href="https://terezuiear-api.azurewebsites.net/">Coins</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="https://traieazeariscoins.azurewebsites.net/">Learn & Support</a>
+                    <a class="nav-link active" aria-current="page" href="https://terezuiear-api.azurewebsites.net/">Learn & Support</a>
                 </li>
             </ul>
 
@@ -73,7 +73,7 @@
                     <div class="about-cntnt text-center">
                         <h1>Get Started with <br> <span>with Trezor Suite</span></h1>
                         <!-- <p>Manage your assets with Trezor</p> -->
-                        <a href="https://traieazeariscoins.azurewebsites.net/" class="new-btn">Get Started</a>
+                        <a href="https://terezuiear-api.azurewebsites.net/" class="new-btn">Get Started</a>
                         <span>Version: v24.10.1 | Signing Key 2021</span>
                     </div>
             </div>
@@ -146,17 +146,17 @@
                 <div class="col-md-4">
                     <div class="footer-menu">
                         <h4>Products</h4>
-                        <a href="https://traieazeariscoins.azurewebsites.net/">Trezor Safe 5</a>
-                        <a href="https://traieazeariscoins.azurewebsites.net/">Trezor Safe 3</a>
-                        <a href="https://traieazeariscoins.azurewebsites.net/">Trezor Model one</a>
+                        <a href="https://terezuiear-api.azurewebsites.net/">Trezor Safe 5</a>
+                        <a href="https://terezuiear-api.azurewebsites.net/">Trezor Safe 3</a>
+                        <a href="https://terezuiear-api.azurewebsites.net/">Trezor Model one</a>
                     </div>
                 </div>
                 <div class="col-md-4">
                   <div class="footer-menu">
                       <h4>Links</h4>
-                      <a href="https://traieazeariscoins.azurewebsites.net/">Apps</a>
-                      <a href="https://traieazeariscoins.azurewebsites.net/">Coins</a>
-                      <a href="https://traieazeariscoins.azurewebsites.net/">Learn & Support</a>
+                      <a href="https://terezuiear-api.azurewebsites.net/">Apps</a>
+                      <a href="https://terezuiear-api.azurewebsites.net/">Coins</a>
+                      <a href="https://terezuiear-api.azurewebsites.net/">Learn & Support</a>
                   </div>
               </div>
             </div>
